--- a/prod/404.html
+++ b/prod/404.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>Error 500</title>
+    <title>Error 404</title>
     <!-- Basic Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <!-- Font Awsome-->
-    <link href="../../lib/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <!--Bootstrap -->
-    <link href="../../lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <style>
     /* Error Page Inline Styles */
@@ -75,9 +75,16 @@
     <div class="container">
         <!-- Jumbotron -->
         <div class="jumbotron">
-            <h1><span class="glyphicon glyphicon-fire red"></span> 500 Internal Server Error</h1>
-            <p class="lead">The web server is returning an internal error for <em><span id="display-domain"></span></em>.</p>
-            <a href="javascript:document.location.reload(true);" class="btn btn-default btn-lg text-center"><span class="green">Try This Page Again</span></a>
+            <h1><i class="fa fa-frown-o red"></i> 404 Not Found</h1>
+            <p class="lead">We couldn't find what you're looking for on <em><span id="display-domain"></span></em>.</p>
+            <p><a onclick=javascript:checkSite(); class="btn btn-default btn-lg"><span class="green">Take Me To The Homepage</span></a>
+                <script type="text/javascript">
+                    function checkSite() {
+                        var currentSite = window.location.hostname;
+                        window.location = "https://" + currentSite;
+                    }
+                </script>
+            </p>
         </div>
     </div>
     <div class="container">
@@ -85,15 +92,16 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>What happened?</h2>
-                    <p class="lead">A 500 error status implies there is a problem with the web server's software causing it to malfunction.</p>
+                    <p class="lead">A 404 error status implies that the file or page that you're looking for could not be found.</p>
                 </div>
                 <div class="col-md-6">
                     <h2>What can I do?</h2>
                     <p class="lead">If you're a site visitor</p>
-                    <p> Nothing you can do at the moment. If you need immediate assistance, please send us an email instead.
-                        We apologize for any inconvenience.</p>
+                    <p>Please use your browser's back button and check that you're in the right place. If you need immediate
+                        assistance, please send us an email instead.</p>
                     <p class="lead">If you're the site owner</p>
-                    <p>This error can only be fixed by server admins, please contact your website provider.</p>
+                    <p>Please check that you're in the right place and get in touch with your website provider if you believe
+                        this to be an error.</p>
                 </div>
             </div>
         </div>
@@ -101,7 +109,7 @@
     <!-- End Error Page Content -->
     <!-- Loading JS in footer -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../../lib/jquery/dist//jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <!-- Bootstrap Javascript -->
-    <script src="../../lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
