--- a/400/index.html
+++ b/400/index.html
@@ -60,20 +60,14 @@
             color: #d9534f;
         }
     </style>
-    <script type="text/javascript">
-        function loadDomain() {
-            var display = document.getElementById("display-domain");
-            display.innerHTML = document.domain;
-        }
-    </script>
 </head>
 
-<body onload="javascript:loadDomain();" class="body">
+<body class="body">
     <!-- Error Page Content -->
     <div class="container">
         <div class="jumbotron">
-            <h1><i class="fa fa-ban red"></i> 401 (Authorization required)</h1>
-            <p class="lead">Sorry! Your password and/or user-name was not vaild on <em><span id="display-domain"></span></em>.</p>
+            <h1><i class="fa fa-exclamation-triangle red"></i> 400 (Bad Request)</h1>
+            <p class="lead">Sorry! Request cannot be fulfilled due to bad syntax.</p>
             <p><a href="javascript:document.location.reload(true);" class="btn btn-default btn-lg text-center"><span class="green">Try again?</span></a></p>
         </div>
     </div>
@@ -82,13 +76,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>What happened?</h2>
-                    <p class="lead">A 401 error status indicates that the password and/or user-name you entered was incorrect.</p>
+                    <p class="lead">A 400 error status indicates that your request cannot be fulfilled due to bad syntax.</p>
                 </div>
                 <div class="col-md-6">
                     <h2>What can I do?</h2>
-                    <p>Please use your browsers back button and check that you're in the right place also check if your password
-                        and/or user-name you have entered is correct. If you need immediate assistance, please send us an
-                        email instead <a href="mailto:webmaster@demonwolfdev.com">here</a>.</p>.</p>
+                    <p>Please use your browsers back button. If you need immediate assistance, please send us an email instead
+                        <a href="mailto:webmaster@demonwolfdev.com">here</a>.</p>.</p>
                 </div>
             </div>
         </div>
