--- a/404/index.html
+++ b/404/index.html
@@ -16,7 +16,7 @@
 <style>
     /* Error Page Inline Styles */
 
-    body {
+    .body {
         padding-top: 20px;
     }
     /* Layout */
@@ -70,7 +70,7 @@
 </script>
 </head>
 
-<body onload="javascript:loadDomain();">
+<body onload="javascript:loadDomain();" class="body">
     <!-- Error Page Content -->
     <div class="container">
         <!-- Jumbotron -->
@@ -81,7 +81,7 @@
                 <script type="text/javascript">
                     function checkSite() {
                         var currentSite = window.location.hostname;
-                        window.location = "http://" + currentSite;
+                        window.location = "https://" + currentSite;
                     }
                 </script>
             </p>
@@ -107,11 +107,9 @@
         </div>
     </div>
     <!-- End Error Page Content -->
-
-    <body>
-        <!-- Loading JS in footer -->
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="../../lib/jquery/dist//jquery.min.js"></script>
-        <!-- Bootstrap Javascript -->
-        <script src="../../lib/bootstrap/dist/js/bootstrap.js"></script>
-    </body>
+    <!-- Loading JS in footer -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="../../lib/jquery/dist//jquery.min.js"></script>
+    <!-- Bootstrap Javascript -->
+    <script src="../../lib/bootstrap/dist/js/bootstrap.js"></script>
+</body>
