--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2>What happened?</h2>
-          <p class="lead">A 404 error status implies that the file or page that you're looking for could not be found.</p>
+          <p class="lead">A 404 error status implies the file or page that you're looking for could not be found.</p>
         </div>
         <div class="col-md-6">
           <h2>What can I do?</h2>
@@ -100,7 +100,10 @@
             .jumbotron .btn {
                 font-size: 21px;
                 padding: 14px 24px;
-
+            }
+            /*To reduce the space between the paragraph and the subtitle*/
+            .lead{
+            	margin-bottom: 1px;	
             }
     .icon svg {
       height: 1em;
